# wiglrs

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  basic.yaml  build.rs  tdm.json  tdm.yaml
.cargo/: config.toml
src/: hparams.rs  main.rs  names.rs  ui.rs
src/brains/: mod.rs  replay_buffer.rs
src/brains/learners/: mod.rs  ncp.rs  utils.rs
src/brains/learners/coma/: mod.rs
src/brains/learners/maddpg/: mod.rs  replay_buffer.rs
src/brains/learners/ppo/: mod.rs  rollout_buffer.rs
src/brains/models/: deterministic_mlp.rs  linear_resnet.rs  mod.rs
src/brains/thinkers/: linalg.rs  mod.rs  ncp.rs  ppo.rs  stats.rs
src/envs/: basic.rs  ffa.rs  mod.rs  tdm.rs
src/envs/maps/: mod.rs  tdm.rs
src/envs/modules/: map_interaction.rs  mod.rs
src/ui/: mod.rs
