[package]
name = "wiglrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_rapier2d = "0.22.0"
bevy_egui = "0.21"
chrono = "0.4.26"
dfdx = { path = "./dfdx", features = ["cuda", "safetensors"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
num-traits = "0.2.16"
rand = "0.8.5"
rand_distr = "0.4.3"
# tch = { version = "0.13.0" }
tensorboard-rs = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.6", features = ["alloc"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 1
