[package]
name = "wiglrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" } # , features = ["dynamic_linking"]
bevy_rapier2d = "0.22.0"
bevy_egui = "0.21"
bevy_tasks = "0.11.2"
chrono = "0.4.26"
itertools = "0.11.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
num-traits = "0.2.16"
rand = "0.8.5"
rand_distr = "0.4.3"
tensorboard-rs = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
kdam = { version = "0.4.1", features = ["rich"] }
burn = { git = "https://github.com/burn-rs/burn.git", package = "burn" }
burn-autodiff = { git = "https://github.com/burn-rs/burn.git", package = "burn-autodiff" }
burn-tch = { git = "https://github.com/burn-rs/burn.git", package = "burn-tch" }
burn-tensor = { git = "https://github.com/burn-rs/burn.git", package = "burn-tensor" }
petgraph = "0.6.4"
crossbeam-channel = "0.5.8"
tokio = { version = "1.32.0", features = ["sync"] }
futures-lite = "1.13.0"
bevy_framepace = "0.13.3"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
